--- a/config_creator/index.html
+++ b/config_creator/index.html
@@ -72,16 +72,17 @@
                             <option value=""></option>
                             <option class="yolo" value="cv2-DM" hidden>cv2-DetectionModel</option>
                             <option class="yolo" value="cv2-RM" hidden>cv2-ReadNet</option>
+                            <option class="yolo" value="torch-Ultralytics" hidden>torch-Ultralytics</option>
                             <option class="detectron2" value="Default" hidden>Default</option>
                             <option class="bs" value="mean" hidden>Mean</option>
                             <option class="bs" value="median" hidden>Median</option>
                             <option class="bs" value="frame_diff" hidden>Frame Difference</option>
                         </select><br>
-                        <div class="dl" hidden>
-                            <label for="path_detector_model">Enter the model path:</label>
-                            <input type="text" id="path_detector_model" name="path_detector_model" size=50/><br>
-                            <label for="path_config_model">Enter the config path of the model:</label>
-                            <input type="text" id="path_config_model" name="path_config_model" size=50/><br>
+                        <div>
+                            <label for="path_detector_model" class="needs_model" hidden>Enter the model path:</label>
+                            <input type="text" id="path_detector_model" name="path_detector_model" size=50 class="needs_model" hidden/><br class="needs_model" hidden>
+                            <label for="path_config_model" class="needs_config" hidden>Enter the config path of the model:</label>
+                            <input type="text" id="path_config_model" name="path_config_model" size=50 class="needs_config" hidden/><br class="needs_config" hidden>
                         </div>
                         <div class="yolo" hidden>
                             <label for="model_input_width">Model input width:</label>
@@ -96,19 +97,16 @@
                         <div class="indent">
                         <label for="yolo_conf_thresh">Confidence threshold:</label>
                         <input type="number" id="yolo_conf_thresh" name="yolo_conf_thresh" size=5 placeholder="0.25" min="0" max="1" step="0.05"/><br>
-                        <label for="yolo_nms_thresh" class="cv2-DM" hidden>Non-max Supression (NMS) threshold:</label>
+                        <label for="yolo_nms_thresh" class="yolo_nms" hidden>Non-max Supression (NMS) threshold:</label>
                         <input type="number" id="yolo_nms_thresh" name="yolo_nms_thresh" size=5 placeholder="0" 
-                            class="cv2-DM" min="0" max="1" step="0.05" hidden/><br class="cv2-DM" hidden>
-                        </div>
-                    </div>
-
-                    <div class="opencv indent" hidden>
-                        <h5>OpenCV</h5>
-                        <div class="indent">
-                        <label for="ocv_gpu_cb">Use GPU:</label>
-                        <input type="checkbox" id="ocv_gpu_cb" name="ocv_gpu_cb" value="ocv_gpu"><br>
-                        <label for="ocv_hp_cb" class="ocv_gpu" hidden>Use half precision:</label>
-                        <input type="checkbox" id="ocv_hp_cb" name="ocv_hp_cb" value="ocv_hp_cb" class="ocv_gpu" hidden>
+                            class="yolo_nms" min="0" max="1" step="0.05" hidden/><br class="yolo_nms" hidden>
+                        <label for="yolo_nms_across_classes_cb" class="yolo_nms" >Apply NMS across classes:</label>
+                        <input type="checkbox" id="yolo_nms_across_classes_cb" name="yolo_nms_across_classes_cb"
+                               value="yolo_nms_across_classes" class="yolo_nms"><br class="yolo_nms">
+                        <label for="yolo_gpu_cb">Use GPU:</label>
+                        <input type="checkbox" id="yolo_gpu_cb" name="yolo_gpu_cb" value="yolo_gpu"><br>
+                        <label for="yolo_hp_cb" class="yolo_hp" hidden>Use half precision:</label>
+                        <input type="checkbox" id="yolo_hp_cb" name="yolo_hp_cb" value="yolo_hp" class="yolo_hp" hidden>
                         </div>
                     </div>
 
